[project]
name = "fingerprint-verification-ml"
version = "0.1.0"
description = "Robust Fingerprint Matching under Distortions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["opencv-python>=4.12.0.88"]
[tool.pylint]
max-line-length = 120
disable = ["C0114", "C0115", "C0116", "E0401"]
output-format = "colorized"
